# pdp-emulator

./: CMakeLists.txt  README.md  main.c  main.cpp
cpu/: cpu.c  cpu.h  cpu_api.c  cpu_api.h
decode/: decode.c  decode.h  decode_table.c
emulation/: branch.c  double_operand_instr.c  emu_helper.c  emu_helper.h  emulation.h  miscellaneous.c  single_operand_instr.c  subr_and_interrupt_instr.c
gui/: bitmapwidget.cpp  bitmapwidget.h  formain.h  process.cpp  process.h  tablemodel.cpp  tablemodel.h  widget.cpp  widget.h  widget.ui
